# sarocket

./: .tasks  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml
docs/: annotated.html  annotated_dup.js  classsar_1_1client-members.html  classsar_1_1client.js  classsar_1_1server.html  classsar_1_1server.js  classsar_1_1socket.js  client_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  index.html  namespaces.html  namespaces_dup.js  namespacesar.html  namespacesar.js  navtreedata.js  navtreeindex0.js  socket_8hpp_source.html
docs/html/: classes.html  classsar_1_1client.html  classsar_1_1server-members.html  classsar_1_1socket-members.html  classsar_1_1socket.html  dir_d44c64559bbebec7f509842c48db8b23.html  index.html  navtreedata.js  navtreeindex0.js  sarocket_8hpp_source.html  server_8hpp_source.html  types_8hpp_source.html
docs/html/search/: all_1.js  all_2.js  all_5.js  all_6.js  classes_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  namespaces_0.js
docs/search/: all_0.js  all_3.js  all_4.js  all_7.js  all_8.js  classes_0.js  functions_0.js  functions_1.js  functions_7.js  pages_0.js  searchdata.js
include/: sarocket.hpp
src/: client.cpp  client.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp  types.hpp
test/: CMakeLists.txt  test_simple.cpp
